attempting to ensure phase coherency between experiments

--- a/fpga/milosar.runs/impl_1/usage_statistics_webtalk.html
+++ b/fpga/milosar.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1577090</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Nov 29 11:54:47 2017</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Nov 30 13:07:49 2017</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>23bba3737d8b4e059d16970f1e1b2f7d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>63</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>72</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a2a6e033-6683-425d-8734-f7dc1242a3fd</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>a2a6e033-6683-425d-8734-f7dc1242a3fd</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-3570 CPU @ 3.40GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2112.756 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2643.591 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 17.04</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
@@ -73,21 +73,21 @@
 <TR ALIGN='LEFT'>    <TD>bibuf=130</TD>
     <TD>bufg=4</TD>
     <TD>carry4=76</TD>
-    <TD>fdre=1503</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdse=57</TD>
+    <TD>fdre=1508</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse=59</TD>
     <TD>fifo36e1=2</TD>
-    <TD>gnd=86</TD>
+    <TD>gnd=84</TD>
     <TD>ibuf=28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibufds=3</TD>
     <TD>inv=2</TD>
-    <TD>lut1=220</TD>
-    <TD>lut2=165</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=309</TD>
-    <TD>lut4=159</TD>
+    <TD>lut1=221</TD>
+    <TD>lut2=166</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=308</TD>
+    <TD>lut4=160</TD>
     <TD>lut5=136</TD>
     <TD>lut6=254</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=2</TD>
-    <TD>obuf=49</TD>
+    <TD>obuf=42</TD>
     <TD>obufds=4</TD>
     <TD>oddr=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ps7=1</TD>
@@ -103,20 +103,20 @@
 <TR ALIGN='LEFT'>    <TD>bibuf=130</TD>
     <TD>bufg=4</TD>
     <TD>carry4=76</TD>
-    <TD>fdre=1503</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdse=57</TD>
+    <TD>fdre=1508</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse=59</TD>
     <TD>fifo36e1=2</TD>
-    <TD>gnd=86</TD>
+    <TD>gnd=84</TD>
     <TD>ibuf=28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibufds=3</TD>
-    <TD>lut1=220</TD>
-    <TD>lut2=165</TD>
-    <TD>lut3=309</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=159</TD>
+    <TD>lut1=221</TD>
+    <TD>lut2=166</TD>
+    <TD>lut3=308</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=160</TD>
     <TD>lut5=136</TD>
     <TD>lut6=254</TD>
     <TD>mmcme2_adv=2</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=49</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=42</TD>
     <TD>obufds=2</TD>
     <TD>oddr=18</TD>
     <TD>ps7=1</TD>
@@ -172,7 +172,7 @@
     <TD>flow_state=default</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_augmented=0</TD>
     <TD>slice_registers_newly_gated=0</TD>
-    <TD>slice_registers_total=1425</TD>
+    <TD>slice_registers_total=1432</TD>
     <TD>srls_augmented=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>srls_newly_gated=0</TD>
     <TD>srls_total=49</TD>
@@ -388,7 +388,7 @@
     <TD>c_channels=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>c_debug_interface=0</TD>
     <TD>c_has_aclken=0</TD>
-    <TD>c_has_aresetn=0</TD>
+    <TD>c_has_aresetn=1</TD>
     <TD>c_has_m_data=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>c_has_m_phase=0</TD>
     <TD>c_has_phase_out=0</TD>
@@ -946,6 +946,24 @@
 </TR><TR ALIGN='LEFT'>    <TD>x_ipversion=1.0</TD>
 </TR>   </TABLE>
    </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>xlslice/4</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>core_container=NA</TD>
+    <TD>din_from=16</TD>
+    <TD>din_to=16</TD>
+    <TD>din_width=32</TD>
+</TR><TR ALIGN='LEFT'>    <TD>iptotal=1</TD>
+    <TD>x_ipcorerevision=0</TD>
+    <TD>x_iplanguage=VERILOG</TD>
+    <TD>x_iplibrary=ip</TD>
+</TR><TR ALIGN='LEFT'>    <TD>x_ipname=xlslice</TD>
+    <TD>x_ipproduct=Vivado 2016.2</TD>
+    <TD>x_ipsimlanguage=MIXED</TD>
+    <TD>x_ipvendor=xilinx.com</TD>
+</TR><TR ALIGN='LEFT'>    <TD>x_ipversion=1.0</TD>
+</TR>   </TABLE>
+   </TD></TR>
   </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_drc</B></TD></TR>
@@ -1000,8 +1018,8 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=8to11 (8 to 11 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>bram=0.011778</TD>
-    <TD>clocks=0.010640</TD>
+    <TD>bram=0.011532</TD>
+    <TD>clocks=0.010679</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_clock_activity=High</TD>
     <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -1010,20 +1028,20 @@
     <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.145604</TD>
+</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.139966</TD>
     <TD>die=xc7z010clg400-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=2.033833</TD>
+    <TD>dynamic=1.739550</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=11.5</TD>
     <TD>enable_probability=0.990000</TD>
     <TD>family=zynq</TD>
     <TD>ff_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>flow_state=routed</TD>
     <TD>heatsink=none</TD>
-    <TD>i/o=0.507330</TD>
+    <TD>i/o=0.214012</TD>
     <TD>input_toggle=12.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>junction_temp=50.1 (C)</TD>
-    <TD>logic=0.003101</TD>
+</TR><TR ALIGN='LEFT'>    <TD>junction_temp=46.7 (C)</TD>
+    <TD>logic=0.002836</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavcc_total_current=0.000000</TD>
@@ -1039,12 +1057,12 @@
     <TD>mmcm=0.212854</TD>
     <TD>netlist_net_matched=NA</TD>
 </TR><TR ALIGN='LEFT'>    <TD>off-chip_power=0.012880</TD>
-    <TD>on-chip_power=2.179437</TD>
+    <TD>on-chip_power=1.879517</TD>
     <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_toggle=12.500000</TD>
     <TD>package=clg400</TD>
-    <TD>pct_clock_constrained=1.040000</TD>
+    <TD>pct_clock_constrained=1.050000</TD>
     <TD>pct_inputs_defined=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>platform=lin64</TD>
     <TD>process=typical</TD>
@@ -1054,7 +1072,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>signals=0.005693</TD>
+</TR><TR ALIGN='LEFT'>    <TD>signals=0.005199</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -1064,28 +1082,28 @@
     <TD>toggle_rate=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>user_board_temp=25.0 (C)</TD>
     <TD>user_effective_thetaja=11.5</TD>
-    <TD>user_junc_temp=50.1 (C)</TD>
+    <TD>user_junc_temp=46.7 (C)</TD>
     <TD>user_thetajb=9.3 (C/W)</TD>
 </TR><TR ALIGN='LEFT'>    <TD>user_thetasa=0.0 (C/W)</TD>
     <TD>vccadc_dynamic_current=0.000000</TD>
     <TD>vccadc_static_current=0.020000</TD>
     <TD>vccadc_total_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.129579</TD>
+    <TD>vccaux_dynamic_current=0.125281</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
     <TD>vccaux_io_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012082</TD>
-    <TD>vccaux_total_current=0.141660</TD>
+    <TD>vccaux_static_current=0.011840</TD>
+    <TD>vccaux_total_current=0.137121</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000656</TD>
-    <TD>vccbram_static_current=0.000772</TD>
-    <TD>vccbram_total_current=0.001428</TD>
+    <TD>vccbram_static_current=0.000676</TD>
+    <TD>vccbram_total_current=0.001332</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.035814</TD>
-    <TD>vccint_static_current=0.008812</TD>
-    <TD>vccint_total_current=0.044626</TD>
+    <TD>vccint_dynamic_current=0.033026</TD>
+    <TD>vccint_static_current=0.007722</TD>
+    <TD>vccint_total_current=0.040748</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -1107,9 +1125,9 @@
     <TD>vcco25_static_current=0.001000</TD>
     <TD>vcco25_total_current=0.001000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.139612</TD>
+    <TD>vcco33_dynamic_current=0.053625</TD>
     <TD>vcco33_static_current=0.001000</TD>
-    <TD>vcco33_total_current=0.140612</TD>
+    <TD>vcco33_total_current=0.054625</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco33_voltage=3.300000</TD>
     <TD>vcco_ddr_dynamic_current=0.354314</TD>
     <TD>vcco_ddr_static_current=0.002000</TD>
@@ -1128,8 +1146,8 @@
     <TD>vccpaux_total_current=0.037491</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccpaux_voltage=1.800000</TD>
     <TD>vccpint_dynamic_current=0.668535</TD>
-    <TD>vccpint_static_current=0.036379</TD>
-    <TD>vccpint_total_current=0.704914</TD>
+    <TD>vccpint_static_current=0.032361</TD>
+    <TD>vccpint_total_current=0.700896</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccpint_voltage=1.000000</TD>
     <TD>vccpll_dynamic_current=0.013878</TD>
     <TD>vccpll_static_current=0.003000</TD>
@@ -1254,7 +1272,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>carry4_functional_category=CarryLogic</TD>
     <TD>carry4_used=60</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=1368</TD>
+    <TD>fdre_used=1375</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=57</TD>
     <TD>fifo36e1_functional_category=Block Memory</TD>
@@ -1266,9 +1284,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>inv_functional_category=LUT</TD>
     <TD>inv_used=2</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=102</TD>
+    <TD>lut1_used=103</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=126</TD>
+    <TD>lut2_used=127</TD>
     <TD>lut3_functional_category=LUT</TD>
     <TD>lut3_used=276</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
@@ -1280,7 +1298,7 @@
     <TD>mmcme2_adv_functional_category=Clock</TD>
     <TD>mmcme2_adv_used=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=49</TD>
+    <TD>obuf_used=42</TD>
     <TD>obufds_functional_category=IO</TD>
     <TD>obufds_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>oddr_functional_category=IO</TD>
@@ -1320,8 +1338,8 @@
     <TD>lut_as_shift_register_used=49</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=35200</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=1397</TD>
-    <TD>register_as_flip_flop_util_percentage=3.97</TD>
+    <TD>register_as_flip_flop_used=1404</TD>
+    <TD>register_as_flip_flop_util_percentage=3.99</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=35200</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
@@ -1332,9 +1350,9 @@
     <TD>slice_luts_util_percentage=5.57</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=35200</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=1397</TD>
-    <TD>slice_registers_util_percentage=3.97</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=3.97</TD>
+    <TD>slice_registers_used=1404</TD>
+    <TD>slice_registers_util_percentage=3.99</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=3.99</TD>
     <TD>fully_used_lut_ff_pairs_used=0</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
@@ -1349,23 +1367,23 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=49</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=49</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=473</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_fixed=473</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_used=544</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=485</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_fixed=485</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_used=535</TD>
     <TD>lut_flip_flop_pairs_available=17600</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=552</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=3.14</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=547</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=3.11</TD>
     <TD>slice_available=4400</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=451</TD>
-    <TD>slice_util_percentage=10.25</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=448</TD>
+    <TD>slice_util_percentage=10.18</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=279</TD>
+    <TD>slicel_used=285</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=172</TD>
-    <TD>unique_control_sets_used=62</TD>
-    <TD>using_o5_and_o6_fixed=62</TD>
+    <TD>slicem_used=163</TD>
+    <TD>unique_control_sets_used=63</TD>
+    <TD>using_o5_and_o6_fixed=63</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=0</TD>
     <TD>using_o5_output_only_fixed=0</TD>
     <TD>using_o5_output_only_used=0</TD>
@@ -1416,27 +1434,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=1296684</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=1326174</TD>
     <TD>bogomips=6784</TD>
     <TD>bram18=0</TD>
     <TD>bram36=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
     <TD>bufr=0</TD>
     <TD>congestion_level=0</TD>
-    <TD>ctrls=62</TD>
+    <TD>ctrls=63</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=1817436</TD>
-    <TD>ff=1425</TD>
+    <TD>estimated_expansions=1844160</TD>
+    <TD>ff=1432</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=4</TD>
     <TD>high_fanout_nets=2</TD>
-    <TD>iob=87</TD>
-    <TD>lut=986</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=2887</TD>
-    <TD>nets=5602</TD>
-    <TD>pins=17959</TD>
+    <TD>iob=80</TD>
+    <TD>lut=988</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=2890</TD>
+    <TD>nets=5603</TD>
+    <TD>pins=17986</TD>
     <TD>pll=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>router_runtime=8.780000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>router_runtime=8.930000</TD>
     <TD>router_timing_driven=1</TD>
     <TD>threads=4</TD>
     <TD>timing_constraints_exist=1</TD>
@@ -1488,8 +1506,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:49s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=676.090MB</TD>
-    <TD>memory_peak=1664.730MB</TD>
+    <TD>memory_gain=676.324MB</TD>
+    <TD>memory_peak=1664.965MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
