--- a/fpga/milosar.runs/impl_1/usage_statistics_webtalk.html
+++ b/fpga/milosar.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1577090</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Jan 12 14:53:21 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Jan 30 15:41:09 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>23bba3737d8b4e059d16970f1e1b2f7d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>81</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>82</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a2a6e033-6683-425d-8734-f7dc1242a3fd</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>a2a6e033-6683-425d-8734-f7dc1242a3fd</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-3570 CPU @ 3.40GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3392.407 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3392.066 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 17.10</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
@@ -31,7 +31,7 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=20</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=22</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -990,6 +990,174 @@
    </TD></TR>
   </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-advisory=default::[not_specified]</TD>
+    <TD>-append=default::[not_specified]</TD>
+    <TD>-file=[specified]</TD>
+    <TD>-format=default::text</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-hier=default::power</TD>
+    <TD>-l=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+    <TD>-no_propagation=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-return_string=default::[not_specified]</TD>
+    <TD>-rpx=[specified]</TD>
+    <TD>-verbose=default::[not_specified]</TD>
+    <TD>-vid=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-xpe=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>airflow=250 (LFM)</TD>
+    <TD>ambient_temp=25.0 (C)</TD>
+    <TD>bi-dir_toggle=12.500000</TD>
+    <TD>bidir_output_enable=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>board_layers=8to11 (8 to 11 Layers)</TD>
+    <TD>board_selection=medium (10&quot;x10&quot;)</TD>
+    <TD>bram=0.011532</TD>
+    <TD>clocks=0.011217</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_clock_activity=High</TD>
+    <TD>confidence_level_design_state=High</TD>
+    <TD>confidence_level_device_models=High</TD>
+    <TD>confidence_level_internal_activity=Medium</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_io_activity=Low</TD>
+    <TD>confidence_level_overall=Low</TD>
+    <TD>customer=TBD</TD>
+    <TD>customer_class=TBD</TD>
+</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.139975</TD>
+    <TD>die=xc7z010clg400-1</TD>
+    <TD>dsp_output_toggle=12.500000</TD>
+    <TD>dynamic=1.740048</TD>
+</TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=11.5</TD>
+    <TD>enable_probability=0.990000</TD>
+    <TD>family=zynq</TD>
+    <TD>ff_toggle=12.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>flow_state=routed</TD>
+    <TD>heatsink=none</TD>
+    <TD>i/o=0.214012</TD>
+    <TD>input_toggle=12.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>junction_temp=46.7 (C)</TD>
+    <TD>logic=0.002845</TD>
+    <TD>mgtavcc_dynamic_current=0.000000</TD>
+    <TD>mgtavcc_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavcc_total_current=0.000000</TD>
+    <TD>mgtavcc_voltage=1.000000</TD>
+    <TD>mgtavtt_dynamic_current=0.000000</TD>
+    <TD>mgtavtt_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavtt_total_current=0.000000</TD>
+    <TD>mgtavtt_voltage=1.200000</TD>
+    <TD>mgtvccaux_dynamic_current=0.000000</TD>
+    <TD>mgtvccaux_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtvccaux_total_current=0.000000</TD>
+    <TD>mgtvccaux_voltage=1.800000</TD>
+    <TD>mmcm=0.212854</TD>
+    <TD>netlist_net_matched=NA</TD>
+</TR><TR ALIGN='LEFT'>    <TD>off-chip_power=0.012880</TD>
+    <TD>on-chip_power=1.880023</TD>
+    <TD>output_enable=1.000000</TD>
+    <TD>output_load=5.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>output_toggle=12.500000</TD>
+    <TD>package=clg400</TD>
+    <TD>pct_clock_constrained=1.100000</TD>
+    <TD>pct_inputs_defined=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>platform=lin64</TD>
+    <TD>process=typical</TD>
+    <TD>ps7=1.282437</TD>
+    <TD>ram_enable=50.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ram_write=50.000000</TD>
+    <TD>read_saif=False</TD>
+    <TD>set/reset_probability=0.000000</TD>
+    <TD>signal_rate=False</TD>
+</TR><TR ALIGN='LEFT'>    <TD>signals=0.005151</TD>
+    <TD>simulation_file=None</TD>
+    <TD>speedgrade=-1</TD>
+    <TD>static_prob=False</TD>
+</TR><TR ALIGN='LEFT'>    <TD>temp_grade=commercial</TD>
+    <TD>thetajb=9.3 (C/W)</TD>
+    <TD>thetasa=0.0 (C/W)</TD>
+    <TD>toggle_rate=False</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_board_temp=25.0 (C)</TD>
+    <TD>user_effective_thetaja=11.5</TD>
+    <TD>user_junc_temp=46.7 (C)</TD>
+    <TD>user_thetajb=9.3 (C/W)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_thetasa=0.0 (C/W)</TD>
+    <TD>vccadc_dynamic_current=0.000000</TD>
+    <TD>vccadc_static_current=0.020000</TD>
+    <TD>vccadc_total_current=0.020000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccadc_voltage=1.800000</TD>
+    <TD>vccaux_dynamic_current=0.125281</TD>
+    <TD>vccaux_io_dynamic_current=0.000000</TD>
+    <TD>vccaux_io_static_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_total_current=0.000000</TD>
+    <TD>vccaux_io_voltage=1.800000</TD>
+    <TD>vccaux_static_current=0.011841</TD>
+    <TD>vccaux_total_current=0.137122</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_voltage=1.800000</TD>
+    <TD>vccbram_dynamic_current=0.000656</TD>
+    <TD>vccbram_static_current=0.000676</TD>
+    <TD>vccbram_total_current=0.001332</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_voltage=1.000000</TD>
+    <TD>vccint_dynamic_current=0.033523</TD>
+    <TD>vccint_static_current=0.007724</TD>
+    <TD>vccint_total_current=0.041247</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_voltage=1.000000</TD>
+    <TD>vcco12_dynamic_current=0.000000</TD>
+    <TD>vcco12_static_current=0.000000</TD>
+    <TD>vcco12_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco12_voltage=1.200000</TD>
+    <TD>vcco135_dynamic_current=0.000000</TD>
+    <TD>vcco135_static_current=0.000000</TD>
+    <TD>vcco135_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco135_voltage=1.350000</TD>
+    <TD>vcco15_dynamic_current=0.000000</TD>
+    <TD>vcco15_static_current=0.001000</TD>
+    <TD>vcco15_total_current=0.001000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco15_voltage=1.500000</TD>
+    <TD>vcco18_dynamic_current=0.018801</TD>
+    <TD>vcco18_static_current=0.001000</TD>
+    <TD>vcco18_total_current=0.019801</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco18_voltage=1.800000</TD>
+    <TD>vcco25_dynamic_current=0.000000</TD>
+    <TD>vcco25_static_current=0.001000</TD>
+    <TD>vcco25_total_current=0.001000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco25_voltage=2.500000</TD>
+    <TD>vcco33_dynamic_current=0.053625</TD>
+    <TD>vcco33_static_current=0.001000</TD>
+    <TD>vcco33_total_current=0.054625</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_voltage=3.300000</TD>
+    <TD>vcco_ddr_dynamic_current=0.354314</TD>
+    <TD>vcco_ddr_static_current=0.002000</TD>
+    <TD>vcco_ddr_total_current=0.356314</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco_ddr_voltage=1.500000</TD>
+    <TD>vcco_mio0_dynamic_current=0.000938</TD>
+    <TD>vcco_mio0_static_current=0.001000</TD>
+    <TD>vcco_mio0_total_current=0.001938</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco_mio0_voltage=3.300000</TD>
+    <TD>vcco_mio1_dynamic_current=0.002187</TD>
+    <TD>vcco_mio1_static_current=0.001000</TD>
+    <TD>vcco_mio1_total_current=0.003187</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco_mio1_voltage=2.500000</TD>
+    <TD>vccpaux_dynamic_current=0.027161</TD>
+    <TD>vccpaux_static_current=0.010330</TD>
+    <TD>vccpaux_total_current=0.037491</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpaux_voltage=1.800000</TD>
+    <TD>vccpint_dynamic_current=0.668535</TD>
+    <TD>vccpint_static_current=0.032368</TD>
+    <TD>vccpint_total_current=0.700903</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpint_voltage=1.000000</TD>
+    <TD>vccpll_dynamic_current=0.013878</TD>
+    <TD>vccpll_static_current=0.003000</TD>
+    <TD>vccpll_total_current=0.016878</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpll_voltage=1.800000</TD>
+    <TD>version=2016.2</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_utilization</B></TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -1286,7 +1454,7 @@
     <TD>nets=5599</TD>
     <TD>pins=18012</TD>
     <TD>pll=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>router_runtime=9.230000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>router_runtime=9.210000</TD>
     <TD>router_timing_driven=1</TD>
     <TD>threads=4</TD>
     <TD>timing_constraints_exist=1</TD>
@@ -1336,9 +1504,9 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:50s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:51s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=679.141MB</TD>
+    <TD>memory_gain=679.148MB</TD>
     <TD>memory_peak=1670.309MB</TD>
 </TR>   </TABLE>
    </TD></TR>
